feat: enhance review selection panel with user-specific filtering and loading behavior